k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx-svc
  labels:
    app: demo-nginx
spec:
  type: LoadBalancer
  selector:
    app: demo-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
